# PytonTest

./: DERS_NOTLARI.ipynb  DERS_NOTU.ipynb  pyproject.toml  sorular.ipynb
src/pytontest/: __init__.py  hello.py
src/pytontest/01-TemelYapılar/: dersNotlari.ipynb
src/pytontest/String_Manipulation/: String_Mani.ipynb
