[project]
name = "pytontest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ramazan", email = "coolstoves@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "jupyterlab>=4.5.3",
]

[project.scripts]
pytontest = "pytontest:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
